<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.2.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<licenses>
		<license>
			<name>New Barco License</name>
			<url>https://github.com/NABEEL-AHMED-JAMIL</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>NABEEL AHMED JAMIL</name>
			<email>nabeel.amd93@gmail.com</email>
			<organization>Barco</organization>
			<organizationUrl>https://github.com/NABEEL-AHMED-JAMIL</organizationUrl>
		</developer>
	</developers>

	<groupId>com.barco</groupId>
	<artifactId>admin-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>admin-api</name>
	<description>Admin-Api For Barco</description>

	<properties>
		<java.version>11</java.version>
		<postgresql.version>42.2.5</postgresql.version>
		<disruptor.version>3.4.2</disruptor.version>
		<jpa.version>2.1.8.RELEASE</jpa.version>
		<swagger.version>2.9.2</swagger.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>

		<dependency>
			<groupId>com.barco</groupId>
			<artifactId>model</artifactId>
			<version>31.05.1355.2023</version>
			<classifier>barco-model</classifier>
		</dependency>

		<dependency>
			<groupId>com.barco</groupId>
			<artifactId>common</artifactId>
			<version>31.05.1355.2023</version>
			<classifier>barco-common-util</classifier>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
